--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     }
 }
 
-//手动导入插件，apply false代表此插件仅应用于构建中的部分或全部子model,而不是root项目
+////手动导入插件，apply false代表此插件仅应用于构建中的部分或全部子model,而不是root项目
 //plugins {
 //    id "com.petterp.router.standard" apply false
 //}
