--- a/settings.gradle
+++ b/settings.gradle
@@ -23,5 +23,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Router"
 include ':app'
-includeBuild("router-gradle-plugin")
+include ':router-gradle-plugin'
 
